--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
