--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "material-design-icons": "^3.0.1",
     "prettier": "^1.13.7",
     "vue": "^2.5.16",
