--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   },
   "dependencies": {
     "material-design-icons": "^3.0.1",
-    "prettier": "^1.13.7",
-    "vue": "^2.5.16",
+    "prettier": "^1.14.3",
+    "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.3",
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
